syntax = "proto3";

option optimize_for = SPEED;

package org.moda.idl;

import "scalapb/scalapb.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "enums.proto";
import "pojo/flow_manager.proto";


message WorkFlowServiceStartReq {
    string                              flow_uuid                   = 10;   // flow_uuid
    google.protobuf.StringValue         param                       = 20;   // 流程参数
}